@@ -1,3 +1,4 @@
+* Include all identifier from python-stdnum
 * Use country code as local prefix to parse phone numbers
 
 Version 5.0.0 - 2018-10-01
